2006-01-20 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-rc1-mm2
	* info/patches/mm_patches/2.6.16-rc1-mm2: added

2006-01-18 David Brown <dmlb2000@gmail.com>
	* info/patches/sws2_patches/suspend2-2.2-rc16-for-2.6.15.1.patch: added

2006-01-18 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.16-rc1-mm1
	* info/patches/mm_patches/2.6.16-rc1-mm1: added

2006-01-17 David Brown <dmlb2000@gmail.com>
	* info/patches/squashfs_patches/squashfs2.2-patch: added 2.6.15

2006-01-17 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rc1
	* info/patches/PRE_2_6/patch-2.6.16-rc1: added

2006-01-15 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.15-mm4
	* info/patches/mm_patches/2.6.15-mm4: added

2006-01-15 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15-cks2
	* info/patches/ck_server_patches/patch-2.6.15-cks2: added

2006-01-15 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15-ck2
	* info/patches/ck_patches/patch-2.6.15-ck2: added

2006-01-15 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15.1
	* info/patches/maintenance_patches/patch-2.6.15.1: added

2006-01-13 David Brown <dmlb2000@gmail.com>
	* PREPARE: fixed problem when loading an expert built oldktree the mode
	  should not be changed to oldktree when using the expert trees

2006-01-11 Eric Sandall <eric@sandall.us>
	* info/patches/gensplash_patches/fbsplash-0.9.2-r5-2.6.15-rc1.patch: Added
	* info/patches/sws2_patches/suspend2-2.2-rc16-for-2.6.15.patch: Added
	  Store GPG .sigs for patches we make/obtain on download.sourcemage.org, not
	  in Perforce

2006-01-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.15-mm3
	* info/patches/mm_patches/2.6.15-mm3: added
	* info/patches/mm_patches/2.6.15-mm2: added
	* info/patches/mm_patches/2.6.15-mm1: added